--- a/index.html
+++ b/index.html
@@ -4,9 +4,219 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chess</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1> </h1>
-
+    <div class="chess-board">
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+        <div class="chess-row">
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+            <div class="chess-cell">
+                <div class="coin"></div>
+            </div>
+        </div>
+    </div>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
