--- a/index.html
+++ b/index.html
@@ -5,216 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chess</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/coin-styles.css">
 </head>
 <body>
-    <div class="chess-board">
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-        </div>
-        <div class="chess-row">
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
-            <div class="chess-cell">
-                <div class="coin"></div>
-            </div>
+    <div class="stage">
+        <div class="chess-board">
         </div>
     </div>
     <script src="scripts/index.js"></script>
